@@ -97,3 +97,7 @@
   * 1.21
   * New MemchacedStore 
   * Rails 4 support
+
+17-September-2012
+  * Allow rack-mini-profiler to be sourced from github
+  * Extracted the pp=profile-gc-time out, the object space profiler needs to disable gc
